--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <button onclick="stop();" class="bg-red">Zerar</button>
         </div>
     </center>
+    <br><br><br><br>
+    <center>
+        &copy; André Meliunas
+    </center>
 
     <script src="script.js"></script>
 </body>
